# semiCLICK

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_semiclick.bat
src/semiclick/: __init__.py  __main__.py  app.py
src/semiclick/core/: __init__.py  models.py  runner.py  storage.py  validation.py
src/semiclick/ui/: main_window.py
tests/: test_runner.py  test_storage.py  test_validation.py
