[project]
name = "semiclick"
version = "0.1.0"
description = "Always-on-top Minecraft macro overlay for Windows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PySide6>=6.8,<7.0",
  "keyboard>=0.13.5,<0.14",
  "pydirectinput>=1.0.4,<2.0",
  "pywin32>=308,<309",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
